Migrated from AngularJS ng-route to AngularUI Router.

--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -8,11 +8,13 @@
 
     <body>
         <div>
-            <div data-ng-view=""></div>
+            <!-- Placeholder for views -->
+            <div data-ui-view></div>
         </div>
 
+        <!-- Javascript libraries -->
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
         <script src="app/app.js"></script>
     </body>
 </html>
