--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -9,7 +9,7 @@
     <body>
         <div>
             <!-- Placeholder for views -->
-            <div data-ui-view></div>
+            <div data-ui-view=""></div>
         </div>
 
         <!-- Javascript libraries -->
