--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -7,10 +7,11 @@
     </head>
 
     <body>
-        <div>
-            <!-- Placeholder for views -->
-            <div data-ui-view=""></div>
-        </div>
+        <!-- Placeholder for views -->
+        <div data-ui-view=""></div>
+
+        <!-- Navigation -->
+        <a href="#">Home</a> | <a href="#/about">About</a>
 
         <!-- Javascript libraries -->
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
