Added one-way data binding for page title.

--- a/sandbox-angularjs/app/about/about.partial.html
+++ b/sandbox-angularjs/app/about/about.partial.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <h1>About</h1>
+    <h1 data-ng-bind="pageTitle"></h1>
+
     <p>Name: <input type="text" data-ng-model="name"></p>
     <p>Hello, {{ name }}!</p>
 
