--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-us" data-ng-app="demoApp">
+<html lang="en-us" data-ng-app="demoApp" data-ng-controller="appController">
     <head>
         <meta charset="utf-8">
 
-        <title>AngularJS Sandbox</title>
+        <title data-ng-bind="pageTitle + ' | Demo App'"></title>
     </head>
 
     <body>
