--- a/sandbox-angularjs/app/home/home.partial.html
+++ b/sandbox-angularjs/app/home/home.partial.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Home</h1>
+    <h1 data-ng-bind="pageTitle"></h1>
 
     <p>Search by name: <input type="text" data-ng-model="filter.name"></p>
     <p>Searching for: {{ name }}</p>
