--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -14,8 +14,11 @@
         <a href="#">Home</a> | <a href="#/about">About</a>
 
         <!-- Javascript libraries -->
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
+
         <script src="app/app.js"></script>
+        <script src="app/home/home.js"></script>
+        <script src="app/about/about.js"></script>
     </body>
 </html>
