Minor layout update. Refactored repeated code.

--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -7,11 +7,13 @@
     </head>
 
     <body>
-        <!-- Placeholder for views -->
-        <div data-ui-view=""></div>
+        <h1 data-ng-bind="pageTitle"></h1>
 
         <!-- Navigation -->
         <a href="#">Home</a> | <a href="#/about">About</a>
+
+        <!-- Placeholder for views -->
+        <div data-ui-view=""></div>
 
         <!-- Javascript libraries -->
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
