--- a/sandbox-angularjs/app/home/home.partial.html
+++ b/sandbox-angularjs/app/home/home.partial.html
@@ -1,6 +1,6 @@
 <div class="container">
     <p>Search by name: <input type="text" data-ng-model="filter.name"></p>
-    <p>Searching for: {{ name }}</p>
+    <p>Searching for: {{ filter.name }}</p>
 
     <table border=1>
         <thead>
