Fixed minor bug with filter not filtering data correctly (due to incorrect reference to filtered data).

--- a/sandbox-angularjs/app/home/home.partial.html
+++ b/sandbox-angularjs/app/home/home.partial.html
@@ -10,7 +10,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr data-ng-repeat="customer in customers | filter: filter.name">
+            <tr data-ng-repeat="customer in customers | filter: filter">
                 <td>{{ customer.name }}</td>
                 <td>{{ customer.city }}</td>
             </tr>
