--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -7,9 +7,12 @@
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="styles/demoApp.css">
     </head>
 
     <body>
+        <div id="background"></div>
+
         <h1 data-ng-bind="pageTitle"></h1>
 
         <!-- Navigation -->
