Added CSS for header.

--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -13,7 +13,9 @@
     <body>
         <div id="background"></div>
 
-        <h1 data-ng-bind="pageTitle"></h1>
+        <header>
+            <h1 data-ng-bind="pageTitle"></h1>
+        </header>
 
         <!-- Navigation -->
         <a href="#"><i class="fa fa-home"></i> Home</a> | <a href="#/about"><i class="fa fa-users"></i> About</a>
