Added CSS for top navigation bar. Converted in-line layout to unordered list layout for top navigation bar. Minor CSS refactoring.

--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -18,7 +18,12 @@
         </header>
 
         <!-- Navigation -->
-        <a href="#"><i class="fa fa-home"></i> Home</a> | <a href="#/about"><i class="fa fa-users"></i> About</a>
+        <nav>
+            <ul>
+                <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="#/about"><i class="fa fa-users"></i> About</a></li>
+            </ul>
+        </nav>
 
         <!-- Placeholder for views -->
         <div data-ui-view=""></div>
