--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -26,7 +26,7 @@
         </nav>
 
         <!-- Placeholder for views -->
-        <div data-ui-view=""></div>
+        <div id="content" data-ui-view=""></div>
 
         <!-- Javascript libraries -->
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
