--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -15,7 +15,7 @@
 
         <!-- Header -->
         <header>
-            <h1 data-ng-bind="pageTitle"></h1>
+            <h1>{{ siteTitle }}</h1>
         </header>
 
         <!-- Navigation -->
@@ -28,7 +28,10 @@
         </nav>
 
         <!-- Placeholder for views -->
-        <div id="content" data-ui-view=""></div>
+        <div id="content">
+            <h2 data-ng-bind="pageTitle"></h2>
+            <div data-ui-view></div>
+        </div>
 
         <!-- Footer -->
         <footer>An AngularJS demo app.</footer>
