--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -13,12 +13,12 @@
     <body>
         <div id="background"></div>
 
-        <!-- Header -->
+        <!-- Site header -->
         <header>
             <h1>{{ siteTitle }}</h1>
         </header>
 
-        <!-- Navigation -->
+        <!-- Site navigation -->
         <nav>
             <ul>
                 <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
@@ -27,13 +27,17 @@
             </ul>
         </nav>
 
-        <!-- Placeholder for views -->
+        <div id="sidebar"></div>
+
+        <!-- Page content -->
         <div id="content">
             <h2 data-ng-bind="pageTitle"></h2>
+
+            <!-- Placeholder for views -->
             <div data-ui-view></div>
         </div>
 
-        <!-- Footer -->
+        <!-- Site footer -->
         <footer>An AngularJS demo app.</footer>
 
 
