Fixed minor bug with sidebar clipping through footer.

--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -27,6 +27,7 @@
             </ul>
         </nav>
 
+        <!-- Site sidebar -->
         <div id="sidebar"></div>
 
         <!-- Page content -->
