Added active navigation bar link highlighting.

--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -21,9 +21,9 @@
         <!-- Site navigation -->
         <nav>
             <ul>
-                <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="#/about"><i class="fa fa-users"></i> About</a></li>
-                <li><a href="#/contact"><i class="fa fa-envelope"></i> Contact</a></li>
+                <li data-ng-class="{ active: isActive('/') }"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                <li data-ng-class="{ active: isActive('/about') }"><a href="#/about"><i class="fa fa-users"></i> About</a></li>
+                <li data-ng-class="{ active: isActive('/contact') }"><a href="#/contact"><i class="fa fa-envelope"></i> Contact</a></li>
             </ul>
         </nav>
 
