--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -49,5 +49,6 @@
         <script src="app/app.js"></script>
         <script src="app/home/home.js"></script>
         <script src="app/about/about.js"></script>
+        <script src="app/contact/contact.js"></script>
     </body>
 </html>
