--- a/sandbox-angularjs/app/about/about.partial.html
+++ b/sandbox-angularjs/app/about/about.partial.html
@@ -1,23 +1,1 @@
-<p>Search by city: <input type="text" data-ng-model="filter.city"></p>
-<p>Searching for: {{ filter.city }}</p>
-
-<table border=1>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>City</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr data-ng-repeat="customer in customers | filter: filter">
-            <td>{{ customer.name }}</td>
-            <td>{{ customer.city }}</td>
-        </tr>
-    </tbody>
-</table>
-
-<p>
-    Customer Name: <input type="text" data-ng-model="newCustomer.name"><br>
-    Customer City: <input type="text" data-ng-model="newCustomer.city"><br>
-    <button data-ng-click="addCustomer()">Add Customer</button>
-</p>
+<p>About page</p>
