Added linear gradient with opacity with background image.

--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -11,7 +11,10 @@
     </head>
 
     <body>
-        <div id="background"></div>
+        <div id="background">
+            <div id="image"></div>
+            <div id="gradient"></div>
+        </div>
 
         <!-- Site header -->
         <header>
