Applied "use strict" mode to modules.

--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+        <!-- Site background -->
         <div id="background">
             <div id="image"></div>
             <div id="gradient"></div>
@@ -38,7 +39,7 @@
             <h2 data-ng-bind="pageTitle"></h2>
 
             <!-- Placeholder for views -->
-            <div data-ui-view></div>
+            <div data-ui-view=""></div>
         </div>
 
         <!-- Site footer -->
