--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -7,7 +7,7 @@
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="styles/demoApp.css">
+        <link rel="stylesheet" href="css/demoApp.css">
     </head>
 
     <body>
@@ -50,9 +50,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
 
-        <script src="app/app.js"></script>
-        <script src="app/home/home.js"></script>
-        <script src="app/about/about.js"></script>
-        <script src="app/contact/contact.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/controllers.js"></script>
     </body>
 </html>
