--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -7,49 +7,57 @@
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/demoApp.css">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="css/demoApp.css"> -->
     </head>
 
     <body>
-        <!-- Site background -->
-        <div id="background">
-            <div id="image"></div>
-            <div id="gradient"></div>
-        </div>
+        <!-- Site header and navigation -->
+        <header class="navbar navbar-default">
+            <div class="container container-fluid">
+                <!-- Site header -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-0">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">{{ siteTitle }}</a>
+                </div>
 
-        <!-- Site header -->
-        <header>
-            <h1>{{ siteTitle }}</h1>
+                <!-- Site navigation -->
+                <nav id="navbar-collapse-0" class="collapse navbar-collapse" role="navigation">
+                    <ul class="nav navbar-nav">
+                        <li data-ng-class="{ active: isActive('/') }"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                        <li data-ng-class="{ active: isActive('/about') }"><a href="#/about"><i class="fa fa-users"></i> About</a></li>
+                        <li data-ng-class="{ active: isActive('/contact') }"><a href="#/contact"><i class="fa fa-envelope"></i> Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
-
-        <!-- Site navigation -->
-        <nav>
-            <ul>
-                <li data-ng-class="{ active: isActive('/') }"><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                <li data-ng-class="{ active: isActive('/about') }"><a href="#/about"><i class="fa fa-users"></i> About</a></li>
-                <li data-ng-class="{ active: isActive('/contact') }"><a href="#/contact"><i class="fa fa-envelope"></i> Contact</a></li>
-            </ul>
-        </nav>
-
-        <!-- Site sidebar -->
-        <div id="sidebar"></div>
 
         <!-- Page content -->
         <div id="content">
-            <h2 data-ng-bind="pageTitle"></h2>
-
-            <!-- Placeholder for views -->
-            <div data-ui-view=""></div>
+            <div class="container">
+                <h2 data-ng-bind="pageTitle"></h2>
+                <div data-ui-view=""></div>
+            </div>
         </div>
 
         <!-- Site footer -->
-        <footer>An AngularJS demo app.</footer>
+        <footer>
+            <div class="container">
+                <p class="text-center"><small>An AngularJS demo app.</small></p>
+            </div>
+        </footer>
 
 
         <!-- Javascript libraries -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
-
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
     </body>
