--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -8,7 +8,7 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-        <!-- <link rel="stylesheet" href="css/demoApp.css"> -->
+        <link rel="stylesheet" href="css/demoApp2.css">
     </head>
 
     <body>
@@ -29,13 +29,13 @@
                 <!-- Site navigation -->
                 <nav id="navbar-collapse-0" class="collapse navbar-collapse" role="navigation">
                     <ul class="nav navbar-nav">
-                        <li data-ng-class="{ active: isActive('/') }"><a href="#">Home</a></li>
+                        <!-- <li data-ng-class="{ active: isActive('/') }"><a href="#">Home</a></li> -->
                         <li data-ng-class="{ active: isActive('/about') }"><a href="#/about">About</a></li>
                         <li data-ng-class="{ active: isActive('/contact') }"><a href="#/contact">Contact</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href=""title="View Profile">Test User</a></li>
+                        <li><a href=""title="View Profile"><i class="fa fa-smile-o"></i> Test User</a></li>
                         <li><a href="" title="Notifications"><i class="fa fa-envelope"></i></a></li>
                         <li><a href="" title="Account Settings"><i class="fa fa-cog"></i></a></li>
                         <li><a href="" title="Sign Out"><i class="fa fa-power-off"></i></a></li>
