--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -67,6 +67,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
+        <script src="js/directives.js"></script>
         <script src="js/factories.js"></script>
     </body>
 </html>
