--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -35,7 +35,7 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href=""title="View Profile"><i class="fa fa-smile-o"></i> Test User</a></li>
+                        <li><a href="" title="View Profile"><i class="fa fa-smile-o"></i> Test User</a></li>
                         <li><a href="" title="Notifications"><i class="fa fa-envelope"></i></a></li>
                         <li><a href="" title="Account Settings"><i class="fa fa-cog"></i></a></li>
                         <li><a href="" title="Sign Out"><i class="fa fa-power-off"></i></a></li>
@@ -48,7 +48,7 @@
         <div id="content">
             <div class="container">
                 <h2 class="page-header" data-ng-bind="pageTitle"></h2>
-                <div data-ui-view=""></div>
+                <div data-ui-view></div>
             </div>
         </div>
 
