--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -2,8 +2,12 @@
 <html lang="en-us" data-ng-app="demoApp" data-ng-controller="appController">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title data-ng-bind="pageTitle + ' | Demo App'"></title>
+        <meta name="description" content="AngularJS Demo App">
+
+        <title data-ng-bind="pageTitle + ' | Demo App'">Demo App</title>
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
@@ -18,7 +22,7 @@
                 <!-- Site header -->
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">{{ siteTitle }}</a>
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-0">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -27,7 +31,7 @@
                 </div>
 
                 <!-- Site navigation -->
-                <nav id="navbar-collapse-0" class="collapse navbar-collapse" role="navigation">
+                <nav id="navbar-collapse" class="collapse navbar-collapse" role="navigation">
                     <ul class="nav navbar-nav">
                         <!-- <li data-ng-class="{ active: isActive('/') }"><a href="#">Home</a></li> -->
                         <li data-ng-class="{ active: isActive('/about') }"><a href="#/about">About</a></li>
@@ -54,8 +58,8 @@
 
         <!-- Site footer -->
         <footer>
-            <div class="container">
-                <p class="text-center"><small>An AngularJS demo app.</small></p>
+            <div class="container text-center">
+                <div>A demo app built with <a href="http://angularjs.org">AngularJS</a>.</div>
             </div>
         </footer>
 
