--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -69,6 +69,7 @@
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
+        <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/directives.js"></script>
