--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -74,5 +74,6 @@
         <script src="js/controllers.js"></script>
         <script src="js/directives.js"></script>
         <script src="js/factories.js"></script>
+        <script src="js/filters.js"></script>
     </body>
 </html>
