--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -42,7 +42,7 @@
                         <li><a href="" title="View Profile"><i class="fa fa-smile-o"></i> Test User</a></li>
                         <li><a href="" title="Notifications"><i class="fa fa-envelope"></i></a></li>
                         <li><a href="" title="Account Settings"><i class="fa fa-cog"></i></a></li>
-                        <li><a href="" title="Sign Out"><i class="fa fa-power-off"></i></a></li>
+                        <li><a href="#/login" title="Sign Out"><i class="fa fa-power-off"></i></a></li>
                     </ul>
                 </nav>
             </div>
