--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -71,9 +71,10 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="js/app.js"></script>
-        <script src="js/controllers.js"></script>
-        <script src="js/directives.js"></script>
-        <script src="js/factories.js"></script>
-        <script src="js/filters.js"></script>
+        <script src="js/controllers/controllers.js"></script>
+        <script src="js/directives/sampleBarChart.js"></script>
+        <script src="js/directives/simpleCheckbox.js"></script>
+        <script src="js/factories/homeFactory.js"></script>
+        <script src="js/filters/simpleFilter.js"></script>
     </body>
 </html>
