Finished refactoring directory structure (controllers).

--- a/sandbox-angularjs/index.html
+++ b/sandbox-angularjs/index.html
@@ -70,8 +70,12 @@
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+        <!-- Application scripts -->
         <script src="js/app.js"></script>
-        <script src="js/controllers/controllers.js"></script>
+        <script src="js/controllers/aboutController.js"></script>
+        <script src="js/controllers/appController.js"></script>
+        <script src="js/controllers/homeController.js"></script>
         <script src="js/directives/sampleBarChart.js"></script>
         <script src="js/directives/simpleCheckbox.js"></script>
         <script src="js/factories/homeFactory.js"></script>
